Added a complated 404 page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@
     --body-bigger: 24px;
     --body-medium: 22px;
     --body: 18px;
+    --display: 80px;
     --scale: 1;
     --scale-nav-link: 1;
     --meta: 14px;
