--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -100,6 +100,18 @@
     min-width: 265px;
 }
 
+
+/*767px*/
+
+@media (max-width: 767px) {
+    .notFound a {
+        min-width: 200px;
+    }
+}
+
+
+/*1080px*/
+
 @media (min-width: 1080px) {
     .display {
         font-size: calc(var(--display)*var(--scale));
