--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -1,3 +1,11 @@
+.errorContainer {
+    max-width: var(--layoutWidthMax);
+    margin: 0 auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 100%;
+}
+
 .notFound {
     text-align: center;
 }
@@ -98,6 +106,19 @@
 
 .notFound a {
     min-width: 265px;
+}
+
+
+/*max 599px*/
+
+@media (max-width: 599px) {
+    .HeroError {
+        padding: 100px 0 80px;
+        margin-bottom: 25px;
+    }
+    .notFound p {
+        font-size: 1rem;
+    }
 }
 
 
