--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
     --yellow: #fddb60;
     --white: #ffffff;
     --black: #000;
+    --primary-color: #080F1E;
     --blue-light: #8595e0;
     --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --color-white-400: #99a0aa;
@@ -23,6 +24,7 @@
     --fontWeightLight: 300;
     --fontWeightRegular: 400;
     --fontWeightMedium: 500;
+    --fontWeightBold: 700;
     --LinkUnderline: var(--color-white-400);
     --rowGapNormal: 8px;
     --rowGapMedium: 24px;
@@ -39,6 +41,7 @@
     --padding-desktop: 80px;
     --container: 1600px;
     --transition: cubic-bezier(0.24, 0.82, 0.43, 1.05);
+    --navDark: var(--black);
 }
 
 @font-face {
@@ -183,11 +186,7 @@ svg:not(:root) {
     overflow: hidden;
 }
 
-@media (min-width: 1080px) and (max-width: 1199.98px) {
-    /* :root {
-        --scale-nav-link: 1.1;
-    } */
-}
+@media (min-width: 1080px) and (max-width: 1199.98px) {}
 
 .grid {
     padding-left: var(--padding-mobile);
