--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -23,17 +23,10 @@
 }
 
 .myContainer {
-    max-width: var(--container);
+    max-width: var(--container-desktop-menu);
     margin-left: auto;
     margin-right: auto;
-}
-
-.header {
-    /* align-items: center;
-    left: 0;
-    position: absolute;
-    top: 0;
-    z-index: 99; */
+    padding: 0 50px;
 }
 
 .logo {
@@ -44,11 +37,6 @@
     backface-visibility: hidden;
     left: -999999999px;
     position: absolute;
-}
-
-.grid {
-    padding-left: var(--padding-mobile);
-    padding-right: var(--padding-mobile);
 }
 
 .navbar {
@@ -143,13 +131,12 @@
 
 .hamburgerRow {
     position: fixed;
-    right: var(--padding-mobile);
     pointer-events: none;
     z-index: 99;
     left: 0;
     right: 0;
     margin: 0 auto;
-    max-width: var(--container);
+    max-width: var(--container-main);
 }
 
 .hamburgerRow button {
@@ -544,7 +531,11 @@ button .hamburgerText {
 
 /*1100px*/
 
-@media only screen and (max-width: 68.75em) {}
+@media only screen and (max-width: 68.75em) {
+    .myContainer {
+        max-width: 100% !important;
+    }
+}
 
 @media (min-width: 1281px) {
     .left .h6 {
@@ -559,22 +550,19 @@ button .hamburgerText {
     .toggleButton {
         padding-right: var(--padding-desktop)!important;
     }
-    .grid {
-        padding-left: var(--padding-desktop);
-        padding-right: var(--padding-desktop);
-    }
 }
 
 
 /*480px - 1079*/
 
-@media (min-width: 480px) and (max-width: 1079px) {
-    .grid {
-        padding-left: var(--padding-tablet);
-        padding-right: var(--padding-tablet);
+@media (min-width: 480px) and (max-width: 1079px) {}
+
+@media (min-width: 700px) and (max-width:776px) {
+    .navbar {
+        margin-left: 0;
     }
     .toggleButton {
-        padding-right: var(--padding-tablet)!important;
+        padding-right: 0 !important;
     }
 }
 
@@ -605,5 +593,15 @@ button .hamburgerText {
     }
     .sidebarWrapper {
         width: 100% !important;
+    }
+}
+
+
+/*650 - 40.625em*/
+
+@media only screen and (max-width: 40.625em) {
+    .myContainer {
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
