--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -49,7 +49,7 @@
     margin-bottom: 10px;
     text-transform: lowercase;
     font-size: calc(72rem/16);
-    font-weight: var(--fontWeightExtraBold);
+    font-weight: var(--fontWeightMedium);
     margin: 0;
     letter-spacing: -.45px;
     line-height: calc(94/72);
@@ -60,6 +60,18 @@
     letter-spacing: .2px;
     line-height: calc(34/20);
     margin-bottom: 34px;
+}
+
+.grid {
+    display: grid;
+}
+
+.BlogContainer .grid {
+    gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 
