--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -62,34 +62,18 @@
     margin-bottom: 34px;
 }
 
-.grid {
-    display: grid;
+.featuredAllPost {
+    padding-top: var(--rowGapXLarge);
+    padding-bottom: var(--rowGapXLarge);
 }
 
-.BlogContainer .grid {
+.featuredAllPost .grid {
+    display: grid;
     gap: 40px;
     grid-template-columns: repeat(3, 1fr);
     list-style: none;
     margin: 0;
     padding: 0;
-}
-
-.postCard {
-    height: min-content;
-    padding-bottom: 16px;
-    position: relative;
-    z-index: 1;
-}
-
-.postCard::before {
-    box-shadow: 0 30px 60px rgb(0 0 0 / 8%);
-    content: '';
-    height: calc(100% - 26px);
-    left: 0;
-    position: absolute;
-    transition: .2s var(--default-timing-function);
-    width: 100%;
-    z-index: -1;
 }
 
 
