--- a/styles/WorkCallout.module.css
+++ b/styles/WorkCallout.module.css
@@ -4,32 +4,138 @@
     max-width: 86%;
     padding: 0 50px;
     position: relative;
+    overflow: hidden;
+}
+
+.CalloutCointainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+}
+
+.CalloutContent {
+    position: relative;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+}
+
+.CalloutContentBody {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.CalloutContent h2 {
+    color: var(--primary-color) !important;
+    font-size: calc(6rem*var(--scale));
+    font-weight: var(--fontWeightMedium)!important;
+    line-height: 1;
+    letter-spacing: -1px;
+    margin-bottom: 24px;
 }
 
 .Callout {
     margin-bottom: -144px;
     padding: 290px 0;
-    text-align: center;
 }
 
-.Callout h2 {
-    color: var(--primary-color);
-    font-size: calc(95rem/16);
-    letter-spacing: -.6px;
-    line-height: calc(110/95);
-    margin: 0;
-    font-weight: var(--fontWeightBold);
+.Callout .specialLink {
+    color: var(--green);
+    font-weight: var(--fontWeightMedium)!important;
+    font-size: calc(6rem*var(--scale));
+    font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    line-height: 1.1;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    position: relative;
+    -webkit-transform-origin: left bottom;
+    -ms-transform-origin: left bottom;
+    transform-origin: left bottom;
+    will-change: transform;
+    -webkit-transition: scaleX 0.8s cubic-bezier(0.694, 0, 0.335, 1), color 0.8s cubic-bezier(0.694, 0, 0.335, 1);
+    -o-transition: scaleX 0.8s cubic-bezier(0.694, 0, 0.335, 1), color 0.8s cubic-bezier(0.694, 0, 0.335, 1);
+    transition: scaleX 0.8s cubic-bezier(0.694, 0, 0.335, 1), color 0.8s cubic-bezier(0.694, 0, 0.335, 1);
 }
 
-.Callout .specialLink {}
+.Callout .specialLink:after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    z-index: 2;
+    will-change: transform, color;
+    -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.694, 0, 0.335, 1);
+    transition: transform 0.6s;
+    -o-transition: transform 0.6s cubic-bezier(0.694, 0, 0.335, 1);
+    transition: transform 0.6s, -webkit-transform 0.6s;
+    transition-timing-function: cubic-bezier(0.694, 0, 0.335, 1);
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 100% 50%;
+    -ms-transform-origin: 100% 50%;
+    transform-origin: 100% 50%;
+}
+
+.Callout .specialLink:hover:after {
+    -webkit-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transform-origin: 0 50%;
+    -ms-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-timing-function: ease;
+    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
+}
+
+.Callout .linkHasUnderline {
+    border-bottom: 2px solid var(--LinkUnderlineGreen);
+}
 
 @media only screen and (max-width: 650px) {
+    .container {
+        padding: 0 20px;
+    }
     .Callout {
         padding: 140px 0 !important;
+    }
+    .Callout .specialLink {
+        font-size: 1.75rem;
     }
 }
 
 @media only screen and (max-width: 1100px) {
+    .container {
+        max-width: 100% !important;
+    }
     .Callout {
         margin-bottom: -78px;
         padding: 150px 0;
