--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,9 +1,9 @@
 .HeroAbout {
     position: relative;
-    height: 24rem;
+    padding: 250px 0 110px;
     background-size: cover;
-    background-color: #080F1E;
-    text-align: center;
+    background-color: #080f1e;
+    overflow: hidden;
 }
 
 .HeroAbout .bannerBg {
@@ -12,13 +12,12 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: url(../public/pixacod-about.png);
     background-size: cover;
     background-position: 50%;
     -webkit-animation: fadeIn 1.2s;
     animation: fadeIn 1.2s;
-    -webkit-animation-timing-function: cubic-bezier(.25, .46, .45, .94);
-    animation-timing-function: cubic-bezier(.25, .46, .45, .94);
+    -webkit-animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .container {
@@ -29,6 +28,10 @@
     position: relative;
 }
 
+.aboutContainer {
+    z-index: 2;
+}
+
 .curve {
     z-index: 1;
     position: absolute;
@@ -37,16 +40,188 @@
     margin-left: -40%;
     border-radius: 50%;
     box-shadow: 0 100px 0 #fff;
-    -webkit-animation-timing-function: cubic-bezier(.39, .575, .565, 1);
-    animation-timing-function: cubic-bezier(.39, .575, .565, 1);
+    -webkit-animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+    animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+.HeroAbout .large {
+    z-index: 2;
+}
+
+.HeroAbout h1 {
+    color: #5972f3;
+    margin-bottom: 10px;
+    text-transform: lowercase;
+    font-size: calc(95rem / 16);
+    font-weight: var(--fontWeightMedium);
+    margin: 0;
+    letter-spacing: -0.45px;
+    line-height: calc(95 / 72);
+}
+
+.HeroAbout h1 span {
+    color: var(--green);
+    display: block;
+    text-transform: initial;
+}
+
+.ContentWrapper {
+    padding-top: var(--rowGapXLarge);
+    padding-bottom: var(--rowGapXLarge);
+}
+
+.aboutWhat {
+    background: var(--primary-color);
+    color: var(--milky-way);
+    padding: 150px 0 0px;
+}
+
+.aboutWho {
+    padding: 80px 0 0px;
+    position: relative;
+}
+
+.aboutWho h2 {
+    color: #080f1e;
+    max-width: calc(990 / 1200 * 100%);
+    font-size: calc(60rem / 16);
+    font-weight: var(--fontWeightMedium);
+    letter-spacing: -0.7px;
+    line-height: calc(70 / 60);
+    margin-bottom: 25px;
+}
+
+.aboutWho .eyebrow {
+    color: #5972f3;
+    display: block;
+    font: calc(12rem / 16) / calc(14 / 12) var(--body-font);
+    font-weight: var(--medium);
+}
+
+.eyebrow.large {
+    font-size: calc(20rem / 16);
+    letter-spacing: -0.6px;
+    line-height: 1;
+    margin-bottom: 25px;
+    text-transform: none;
+}
+
+.banner690 {
+    width: 100%;
+    height: 30vw;
+    max-height: 700px;
+    max-width: 2000px;
+    margin: 80px 0;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    background-image: url(../public/pixacod-team.png);
+    background-position: 0 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.flexContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.aboutWho article {
+    width: calc(475 / 1200 * 100%);
+}
+
+.aboutWho .section1 article {
+    margin: 60px 0 60px;
+}
+
+.aboutWho .images {
+    align-items: center;
+}
+
+.aboutWho .section1 .images {
+    margin: 0 0 0 calc(-7vw - 50px);
+    width: calc(700 / 1200 * 100%);
+}
+
+.aboutWho .heading4 {
+    font-size: calc(32rem / 16);
+    font-weight: 600;
+    letter-spacing: -0.4px;
+    line-height: calc(42 / 32);
+    margin: 0;
+}
+
+.hideOnDesktop {
+    display: none;
+}
+
+
+/*1101 - 1600px*/
+
+@media (max-width: 1400px) {
+    .aboutWho .heading4 {
+        font-size: calc(22rem / 16);
+        line-height: calc(32 / 22);
+    }
 }
 
 
 /*1100px*/
 
 @media only screen and (max-width: 1100px) {
-    .AboutContainer {
+    .container {
         max-width: 100% !important;
+    }
+    .HeroAbout {
+        padding: 120px 0 80px;
+    }
+    .HeroAbout h1 {
+        font-size: calc(40rem / 16);
+        margin-bottom: 40px;
+    }
+    .aboutWho {
+        padding-top: 60px;
+        margin-bottom: 60px;
+    }
+    .aboutWho h2 {
+        margin-bottom: 15px;
+        max-width: 100%;
+        font-size: calc(30rem / 16);
+        line-height: calc(40 / 32);
+    }
+    .eyebrow.large {
+        font-size: 1rem;
+        line-height: calc(20 / 16);
+        margin-bottom: 15px;
+    }
+    .banner690 {
+        width: 100%;
+        height: 480px;
+        margin-top: 40px;
+        margin-right: 0;
+    }
+    .aboutWho .section1 .images {
+        margin-bottom: 25px !important;
+        width: 100%;
+        margin: 0;
+    }
+    .aboutWho .section1 article {
+        margin: 0 0 60px;
+        width: 100%;
+    }
+    .hideOnDesktop {
+        display: block;
+    }
+    .aboutWho .section1 .images>img {
+        display: none;
+    }
+    .hideOnDesktop img {
+        width: 100% !important;
+    }
+    .hideOnMobile {
+        display: none;
     }
 }
 
@@ -54,7 +229,7 @@
 /*650px*/
 
 @media only screen and (max-width: 650px) {
-    .AboutContainer {
+    .container {
         padding: 0 20px;
     }
 }
@@ -65,8 +240,8 @@
 @media (min-width: 1201px) {
     .curve {
         height: 1000px;
-        -webkit-animation: curve-load-animation-xl .8s;
-        animation: curve-load-animation-xl .8s;
+        -webkit-animation: curve-load-animation-xl 0.8s;
+        animation: curve-load-animation-xl 0.8s;
     }
 }
 
@@ -74,13 +249,20 @@
 /*769px - 1200px*/
 
 @media (min-width: 769px) and (max-width: 1200px) {
-    .HeroAbout {
-        height: 23rem;
-    }
     .curve {
         height: 700px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
+    }
+}
+
+
+/*767px*/
+
+@media only screen and (max-width: 767px) {
+    .banner690 {
+        height: 280px;
+        margin-bottom: 40px;
     }
 }
 
@@ -88,13 +270,10 @@
 /*545px - 768px*/
 
 @media (min-width: 545px) and (max-width: 768px) {
-    .HeroAbout {
-        height: 22rem;
-    }
     .curve {
         height: 500px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
     }
 }
 
@@ -102,12 +281,9 @@
 /*544px*/
 
 @media only screen and (max-width: 544px) {
-    .HeroAbout {
-        height: 21rem;
-    }
     .curve {
         height: 400px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
     }
 }
